2007-03-05  Jason Molenda  (jmolenda@apple.com)

	* Makefile (check): Use the new check command from TOT.

2007-03-05  Jason Molenda  (jmolenda@apple.com)

	* Makefile (install-chmod-macosx): Don't error out if chgrp procmod 
	fails.

2007-03-05  Jason Molenda  (jmolenda@apple.com)

	* Makefile (install-chmod-macosx): Fix typeo in last change.

2007-03-02  Jason Molenda  (jmolenda@apple.com)

	* Makefile (install-chmod-macosx): Don't check whoami(1) output before
	doing chmod.  This file is run as root.

2006-04-13  Jason Molenda  (jmolenda@apple.com)

	* Makefile: Take out all the cross debugger building, the
	framework creation, the installhdrs phase and only install
	a fat /usr/libexec/gdb/gdb-for-codewarrior binary.

2005-12-01  Ronnie Misra (rgmisra@apple.com)

	* gdb.sh: Update to recognize new translate program path/command
	line parameter.

2005-11-16  Jason Molenda  (jmolenda@apple.com)

	* gdb.sh: Add command line parameter when invoking Rosetta.

2005-10-19  Jason Molenda  (jmolenda@apple.com)

	* gdb.sh: Copy DYLD_* into GDB_DYLD_* to get past the setgid barrier.

2005-09-30  Jason Molenda  (jmolenda@apple.com)

	* Makefile: make the gdb binaries setgid procmod.

2005-05-28  Jason Molenda  (jmolenda@apple.com)

	* gdb.sh: Update --help text.

2005-05-18  Jason Molenda  (jmolenda@apple.com)

	* cache-symfiles.sh: Remove.
	* Makefile: Don't install cache-symfiles.sh.

2005-05-03  Jason Molenda  (jmolenda@apple.com)

	* gdb.sh: Add --oah750 command line option.

2005-04-14  Jason Molenda  (jmolenda@apple.com)

	* gdb.sh: Add a -arch command line option.

2005-01-18  Jason Molenda  (jmolenda@apple.com)

	* Makefile (GDB_VERSION): Update to the last merge.

2004-12-06  Jason Molenda  (jmolenda@apple.com)

	* Info-template.plist: It looks like CFBundleDevelopmentRegion needs
	to be defined; whatever.  Looking at two installed frameworks I see 
	English is an acceptable setting, so there we go.  These are just 